# nhbc-session-07-craig

Session-07/: 01-Warmup-Exercises.html  pyproject.toml
Session-07/AI-Lab-Starter/: app.py
Session-07/Exercises/: 01b_hello.py  02b_reactive.py  03b_widgets.py  04b_layout.py
