[project]
name = "session-07"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainladder>=0.8.25",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "scipy>=1.15.3",
    "shiny>=1.5.1",
    "shinywidgets>=0.7.0",
]
